# raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BRDFs/: BRDF.cpp  BRDF.h  Lambertian.cpp  Lambertian.h
Cameras/: Camera.cpp  Camera.h  Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
GeometricObjects/: GeometricObject.cpp  GeometricObject.h  Plane.cpp
Lights/: Ambient.cpp  Ambient.h  Directional.cpp  Directional.h  Light.cpp  Light.h
Materials/: Material.h  Matte.cpp  Matte.h
Samplers/: Hammersley.cpp  Hammersley.h  Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  PureRandom.cpp  PureRandom.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
Tracers/: MultipleObjects.cpp  MultipleObjects.h  RayCast.cpp  RayCast.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h
Utilities/: Constants.h  Maths.h  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  RenderTarget.h  ShadeRec.h  Vector3D.cpp  Vector3D.h
World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
cli/: ImageTarget.cpp  ImageTarget.h  main.cpp
ui/: MainWindow.cpp  MainWindow.h  RenderThread.cpp  RenderThread.h  RenderWindow.cpp  RenderWindow.h
